package edu.hitsz.aircraft;

public interface AircraftFactory {
    AbstractAircraft createAircraft();
}
