@startuml
'https://plantuml.com/class-diagram

interface AircraftFactory{
    +createAircraft():AbstractAircraft
}


AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- Boss


AircraftFactory <|.. MobFactory
AircraftFactory <|.. EliteFactory
AircraftFactory <|.. BossFactory

game ..> AircraftFactory
game --> AbstractAircraft

class game{
    + addBoss():void
    + addMobAndElite():void

}

class MobEnemy {
    + MobEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    + forward():void
    + shoot():List<BaseBullet>
}

class EliteEnemy{
    -shootNum
    -power
    -direction
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    +shoot():List<BaseBullet>
    +forward()
}

class Boss{
    -shootNum
    -power
    -direction
    +EliteEnemy(int locationX, int locationY, int speedX, int speedY, int hp)
    +shoot():List<BaseBullet>
    +forward()
}


class EliteFactory {
+ sethp(int hp)():void
+ createAircraft():AbstractAircraft
}

class MobFactory{
+ sethp(int hp)():void
+ createAircraft():AbstractAircraft
}

class BossFactory{
+ sethp(int hp)():void
+ createAircraft():AbstractAircraft
}
@enduml